Start setting up layout

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -68,6 +68,13 @@ $small-screen: 450px;
   border-bottom: 1px solid darken($white, 10%);
 }
 
+.right {
+  float: right;
+}
+
+.left {
+  float: left;
+}
 
 /*
 =================================================
