--- a/src/index.ejs
+++ b/src/index.ejs
@@ -11,7 +11,7 @@
     <meta name="copyright" content="Francis Mitra">
 
     <meta property="og:description" content="Creative and technical ventures of a traveling photographer and web developer." />
-    <meta property="og:image" content="images/meta/logo.jpg" />
+    <meta property="og:image" content="<%= require('../assets/images/meta/logo.jpg') %>"/>
     <meta property="og:site_name" content="Francis Mitra"/>
   </head>
 
