--- a/src/styles/_blog.scss
+++ b/src/styles/_blog.scss
@@ -24,6 +24,19 @@ BLOG & TUTORIALS
   font-size: 12px;
 }
 
+.blog__content {
+  background-color: #f6f6f6;
+  padding: 15px;
+  margin-bottom: 15px;
+  text-align: justify;
+  font-size: 13px;
+  line-height: 23px;
+  letter-spacing: 1.1px;
+  p {
+    margin: 0 0 10px 0;
+  }
+}
+
 .meta__spacer {
   display: inline-block;
   padding: 0 5px;
