--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,12 +5,12 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="keywords" content="conceptual photography, digital creative, travel photography, street photography, web development, new york web developer, new york photographer">
+    <meta name="keywords" content="conceptual photography, digital creative, travel photography, street photography, new york software engineer, new york developer, new york photographer">
     <meta name="theme-color" content="#333333">
     <meta name="author" content="Francis Mitra">
     <meta name="copyright" content="Francis Mitra">
 
-    <meta property="og:description" content="Creative and technical ventures of a traveling photographer and web developer." />
+    <meta property="og:description" content="Creative and technical ventures of a traveling photographer and software engineer." />
     <meta property="og:image" content="<%= require('../assets/images/meta/logo.jpg') %>"/>
     <meta property="og:site_name" content="Francis Mitra"/>
   </head>
